[8:22PM 7/27/2012]
	- renamed 'cg' variable to 'isGUI'
	- console and gui clients now both share the same 'connecting to server' message
[9:12PM 7/26/2012]
	- GUI client will no longer give the console-mode "/logout and /quit" message
	- GUI client can no longer be resized (for the time being, at least)
[4:59 PM 7/25/2012]
	- client will no longer send blank messages

SERVER
[10:26PM 5/24/2013]
	- added /help and feedback to some commands
[7:59PM 5/18/2013]
	- user is now informed that they are banned when they attempt to send a message to the channel
[10:44PM 5/16/2013]
	- file and directory I/O is now more friendly towards non-Windows platforms
[8:12PM 5/13/2013]
	- server log now has timestamps again
[8:04PM 5/13/2013]
	- /account password now works
	- /account commands no longer show up "raw" in the server console (i.e. password is not displayed)
[5:42PM 5/12/2013]
	- added /motd
[9:54PM 5/11/2013]
	- moved a lot of the login code to individual functions
[5:03PM 5/11/2013]
	- added MOTD support
[3:15PM 5/11/2013]
	- removed ServerBot since it wasn't really being used
[3:06PM 5/11/2013]
	- added /msg support to privately message another user
	- updated writeMsg() to include the time by default
[2:27PM 5/11/2013]
	- text areas in the GUI server now automatically scroll if necessary
[12:02AM 5/11/2013]
	- if the username the user is connecting with is already in use they will be denied
[11:50PM 5/10/2013]
	- /nick no longer works if the username is registered (TODO: allow authenticating as it?)
[11:41PM 5/10/2013]
	- /nick no longer works if another user is using that name
[5:44PM 5/3/2013]
	- banning the console will no longer affect its use of commands (temporary solution, probably)
[5:36PM 5/3/2013]
	- /nick now works correctly
[11:43AM 5/2/2013]
	- removed client-sided username checks and made them server-side instead
		-> previous clients will still be able to connect if they still have the checks
[11:32AM 5/2/2013]
	- added version checking
[9:26PM 5/1/2013]