@@ -13,7 +13,7 @@ SERVER
   all the "created" and "loaded" statements (i.e. just 'permissions reloaded').
 * Add a nogui argument flag to ServerGUI so the jar can be run from the command prompt
   instead of having to launch the GUI-less version from a different jar/command.
-* Implement /help
+* Fix sendMessage so it doesn't cause an exception when the console uses a command that includes it
 
 **********
 *  IDEA  *
