@@ -16,8 +16,8 @@ import java.util.*;
 import org.pavlinic.chat.PacketHandler;
 
 public class Server {
-	static String sVersion = "89";
-	static String compileDate = "May 16, 2013";
+	static String sVersion = "91";
+	static String compileDate = "May 24, 2013";
 	
 	static int minClientVer = 70;     // the minimum version clients must be running to connect
 	
